@startuml "class"

abstract class Type {
  + toString() : string
  {abstract} + accept(visit: TypeVisitor)
}

class PrimitiveType extends Type {
  {static} flyweightMap : map<Primitive, PrimitiveType>
  {static} + getPrimitiveType(value: Primitive) : PrimitiveType
  + accept(visit: TypeVisitor)
  + PrimitiveType(value: Primitive)
}

PrimitiveType "1" *--> "1" Primitive

enum Primitive {
  INT8
  INT16
  INT24
  INT32
  INT
  UINT8
  UINT16
  UINT24
  UINT32
  UINT
  FLOAT
  DOUBLE
  NUMBER
  BOOL
  CHAR
}

class ArrayType extends Type {
  + dimensions: vector<int>
  + accept(visit: TypeVisitor)
  + ArrayType(baseType, vector<int> dimensions)
}

ArrayType o--> "1" Type

interface TypeVisitor {
  {abstract} + visit(type: PrimitiveType)
  {abstract} + visit(type: ArrayType)
}

TypeVisitor ..> Type : visits

class TypeToStringVisitor implements TypeVisitor {
  - ss: stringstream
  {abstract} + visit(type: PrimitiveType)
  {abstract} + visit(type: ArrayType)
  getResult(): string
}


abstract class Expr {
  +toString() : string
  {abstract} + accept(visit: ExprVisitor)
}

enum Literal {
  INT
  FLOAT
  DOUBLE
  CHAR
  STRING
  BOOL
}


class LiteralExpr extends Expr {
  + accept(visit: ExprVisitor)
  getLiteralType() : Literal
  getInt() : long long
  getFloat() : float
  getDouble() : double
  getChar() : char
  getString() : string
  getBool() : bool
  get() : LiteralVariant
}

LiteralExpr *--> Literal

note left of LiteralExpr : "using LiteralVariant = variant<long long, float, double, char, string, bool>;"

class VertexAccessExpr extends Expr {
  + id : string
  + accept(visit: ExprVisitor)
  + getVertex(): Vertex
  + resolve(vertex : Vertex)
  - resolve()
}

VertexAccessExpr "*" --> "1" Scope
VertexAccessExpr "*" --> "1" Vertex

class NotifyExpr extends Expr {
  + accept(visit: ExprVisitor)
}

NotifyExpr "1" --> "*" Expr : params, target

class UnaryExpr extends Expr {
  + accept(visit: ExprVisitor)
}

UnaryExpr "1" --> "1" Expr : operand
UnaryExpr --> Direction
UnaryExpr --> Operator

enum Direction {
  LEFT
  RIGHT
}

class BinaryExpr extends Expr {
  + accept(visit: ExprVisitor)
}

BinaryExpr "1" --> "2" Expr : left,right
BinaryExpr --> Operator


enum Operator {
  HOLON_OP
  ASSIGN
  ASSIGN_PLUS
  ...
  BINARY_NOT
  INC
  DEC
}

interface ExprVisitor {
  {abstract} + visit(expr: LiteralExpr)
  {abstract} + visit(expr: NotifyExpr)
  {abstract} + visit(expr: VertexAccessExpr)
  {abstract} + visit(expr: UnaryExpr)
  {abstract} + visit(expr: BinaryExpr)
}

ExprVisitor ..> Expr : visits

class ExprToStringVisitor implements ExprVisitor {
  - ss: stringstream
  + visit(type: LiteralExpr)
  + visit(expr: NotifyExpr)
  + visit(expr: VertexAccessExpr)
  + visit(expr: UnaryExpr)
  + visit(expr: BinaryExpr)
  getResult(): string
}

enum Visibility
{
  DEFAULT
  PRIVATE
  PUBLIC
}

class Graph extends Scope

class Scope {
  + addVertex(v: Vertex)
  + addEdge(e: Edge)
  + getVertices() : Vertex
  + hasVertex(name : string) : bool
  + getVertex(id : string) : Vertex
  + getEdges() : Edge
}

Scope "1" -->  "*" Vertex
Scope "1" -->  "*" Edge

enum AllowedOperations
{
  NONE
  READ
  WRITE
  NOTIFY
  ALL
}

class Vertex {
  + id : string
  + boundState : bool
  + allowedOperations : int
  + interfaces : vector<string>
  + getEdges() : vector<Edge>
  + operationAllowed(op: AllowedOperations) : bool
}

Vertex "1" --> "1" Visibility
Vertex "1" --> "1" Type
Vertex "1" --> "*" NotificationParameter
Vertex "1" --> "0..4" Expr : stateExpr, initialValue, defaultWhen, defaultWith
Vertex "1" --> "*" Edge
Vertex .. AllowedOperations

class Edge
Edge "1" --> "2..4" Expr: source, destination, when, with

class NotificationParameter
{
  + name: string;
}

NotificationParameter "1" --> "1" Type
NotificationParameter "1" --> "0..1" Expr : default

@enduml